--- a/JavaWebSocket/pom.xml
+++ b/JavaWebSocket/pom.xml
@@ -71,6 +71,13 @@
             <version>${spring.version}</version>
         </dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.0</version>
+		</dependency>
+				
         
     </dependencies>
     <build>
